kustomize/parlasite-2022/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasite-2022
  labels:
    app: parlasite-2022
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasite-2022
  template:
    metadata:
      labels:
        app: parlasite-2022
    spec:
      containers:
        - name: parlasite-2022
          image: parlasite-ljubljana
          ports:
            - containerPort: 3066
          resources:
            requests:
              memory: 400Mi
              cpu: 100m
            limits:
              memory: 400Mi
              cpu: 100m
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"] # give load balancer time to stop sending traffic to this pod
          startupProbe:
            httpGet:
              path: /readyz
              port: 3066
            periodSeconds: 10
            failureThreshold: 30 # 30x10 = 300s = 5min
