kustomize/parlasite-2022/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlasite-2022
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - 2022.zagreb.parlametar.hr
      secretName: parlasite-2022-tls
  rules:
    - host: 2022.zagreb.parlametar.hr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlasite-2022
                port:
                  number: 3066
